# src/spawnsvc/gen/http/openapi.yaml
@@ -54,12 +54,7 @@ paths:
           schema:
             $ref: '#/definitions/ConfigurationResponseBody'
             required:
-            - Namespace
-            - NamePrefix
-            - PortPolicy
-            - ContainerName
-            - ContainerImage
-            - ContainerPort
+            - GameServerSpec
       schemes:
       - http
   /fleet/configure:
@@ -76,15 +71,32 @@ paths:
         schema:
           $ref: '#/definitions/FleetConfigureRequestBody'
           required:
-          - Namespace
-          - NamePrefix
-          - PortPolicy
-          - ContainerName
-          - ContainerImage
-          - ContainerPort
+          - GameServerSpec
       responses:
         "200":
           description: OK response.
+          schema:
+            type: string
+      schemes:
+      - http
+  /fleet/create:
+    post:
+      tags:
+      - fleet
+      summary: create fleet
+      description: Create a new fleet.
+      operationId: fleet#create
+      parameters:
+      - name: CreateRequestBody
+        in: body
+        required: true
+        schema:
+          $ref: '#/definitions/FleetCreateRequestBody'
+          required:
+          - FleetSpec
+      responses:
+        "201":
+          description: Created response.
           schema:
             type: string
       schemes:
@@ -106,48 +118,93 @@ definitions:
     title: ConfigurationResponseBody
     type: object
     properties:
-      ContainerImage:
-        type: string
-        description: Image of the gameserver
-        example: gcr.io/agones-images/udp-server:0.4
-      ContainerName:
-        type: string
-        description: Name of the gameserver-container
-        example: my-server
-      ContainerPort:
-        type: string
-        description: Exposed port of the gameserver
-        example: "7777"
-      NamePrefix:
-        type: string
-        description: Prefix for the generated pod-name
-        example: my-server
-        maxLength: 100
-      Namespace:
-        type: string
-        description: Namespace where the gameserver will run in
-        example: speeddate-system
-        maxLength: 100
-      PortPolicy:
-        type: string
-        description: Portpolicy either dynamic or static
-        example: dynamic
+      GameServerSpec:
+        $ref: '#/definitions/GameServerSpecResponseBody'
+      ObjectMeta:
+        $ref: '#/definitions/ObjectMetaResponseBody'
     example:
-      ContainerImage: gcr.io/agones-images/udp-server:0.4
-      ContainerName: my-server
-      ContainerPort: "7777"
-      NamePrefix: my-server
-      Namespace: speeddate-system
-      PortPolicy: dynamic
+      GameServerSpec:
+        ContainerImage: gcr.io/agones-images/udp-server:0.4
+        ContainerName: my-server
+        ContainerPort: 7777
+        PortPolicy: dynamic
+      ObjectMeta:
+        GenerateName: my-server
+        Namespace: speeddate-system
     required:
-    - Namespace
-    - NamePrefix
-    - PortPolicy
-    - ContainerName
-    - ContainerImage
-    - ContainerPort
+    - GameServerSpec
   FleetConfigureRequestBody:
     title: FleetConfigureRequestBody
+    type: object
+    properties:
+      GameServerSpec:
+        $ref: '#/definitions/GameServerSpecRequestBody'
+      ObjectMeta:
+        $ref: '#/definitions/ObjectMetaRequestBody'
+    example:
+      GameServerSpec:
+        ContainerImage: gcr.io/agones-images/udp-server:0.4
+        ContainerName: my-server
+        ContainerPort: 7777
+        PortPolicy: dynamic
+      ObjectMeta:
+        GenerateName: my-server
+        Namespace: speeddate-system
+    required:
+    - GameServerSpec
+  FleetCreateRequestBody:
+    title: FleetCreateRequestBody
+    type: object
+    properties:
+      FleetSpec:
+        $ref: '#/definitions/FleetSpecRequestBody'
+      ObjectMeta:
+        $ref: '#/definitions/ObjectMetaRequestBody'
+    example:
+      FleetSpec:
+        Replicas: 1746324384
+        Template:
+          GameServerSpec:
+            ContainerImage: gcr.io/agones-images/udp-server:0.4
+            ContainerName: my-server
+            ContainerPort: 7777
+            PortPolicy: dynamic
+          ObjectMeta:
+            GenerateName: my-server
+            Namespace: speeddate-system
+      ObjectMeta:
+        GenerateName: my-server
+        Namespace: speeddate-system
+    required:
+    - FleetSpec
+  FleetSpecRequestBody:
+    title: FleetSpecRequestBody
+    type: object
+    properties:
+      Replicas:
+        type: integer
+        description: Replicas
+        example: 1480781296
+        format: int32
+      Template:
+        $ref: '#/definitions/GameserverTemplateRequestBody'
+    description: Spec for Fleet
+    example:
+      Replicas: 126642409
+      Template:
+        GameServerSpec:
+          ContainerImage: gcr.io/agones-images/udp-server:0.4
+          ContainerName: my-server
+          ContainerPort: 7777
+          PortPolicy: dynamic
+        ObjectMeta:
+          GenerateName: my-server
+          Namespace: speeddate-system
+    required:
+    - Replicas
+    - Template
+  GameServerSpecRequestBody:
+    title: GameServerSpecRequestBody
     type: object
     properties:
       ContainerImage:
@@ -159,37 +216,119 @@ definitions:
         description: Name of the gameserver-container
         example: my-server
       ContainerPort:
-        type: string
+        type: integer
         description: Exposed port of the gameserver
-        example: "7777"
-      NamePrefix:
-        type: string
-        description: Prefix for the generated pod-name
-        example: my-server
-        maxLength: 100
-      Namespace:
-        type: string
-        description: Namespace where the gameserver will run in
-        example: speeddate-system
-        maxLength: 100
+        example: 7777
+        format: int32
       PortPolicy:
         type: string
         description: Portpolicy either dynamic or static
         example: dynamic
+    description: GameserverTemplate describes gameserver
     example:
       ContainerImage: gcr.io/agones-images/udp-server:0.4
       ContainerName: my-server
-      ContainerPort: "7777"
-      NamePrefix: my-server
-      Namespace: speeddate-system
+      ContainerPort: 7777
       PortPolicy: dynamic
     required:
-    - Namespace
-    - NamePrefix
     - PortPolicy
-    - ContainerName
     - ContainerImage
+    - ContainerName
     - ContainerPort
+  GameServerSpecResponseBody:
+    title: GameServerSpecResponseBody
+    type: object
+    properties:
+      ContainerImage:
+        type: string
+        description: Image of the gameserver
+        example: gcr.io/agones-images/udp-server:0.4
+      ContainerName:
+        type: string
+        description: Name of the gameserver-container
+        example: my-server
+      ContainerPort:
+        type: integer
+        description: Exposed port of the gameserver
+        example: 7777
+        format: int32
+      PortPolicy:
+        type: string
+        description: Portpolicy either dynamic or static
+        example: dynamic
+    description: GameserverTemplate describes gameserver
+    example:
+      ContainerImage: gcr.io/agones-images/udp-server:0.4
+      ContainerName: my-server
+      ContainerPort: 7777
+      PortPolicy: dynamic
+    required:
+    - PortPolicy
+    - ContainerImage
+    - ContainerName
+    - ContainerPort
+  GameserverTemplateRequestBody:
+    title: GameserverTemplateRequestBody
+    type: object
+    properties:
+      GameServerSpec:
+        $ref: '#/definitions/GameServerSpecRequestBody'
+      ObjectMeta:
+        $ref: '#/definitions/ObjectMetaRequestBody'
+    description: GameserverTemplate describes gameserver
+    example:
+      GameServerSpec:
+        ContainerImage: gcr.io/agones-images/udp-server:0.4
+        ContainerName: my-server
+        ContainerPort: 7777
+        PortPolicy: dynamic
+      ObjectMeta:
+        GenerateName: my-server
+        Namespace: speeddate-system
+    required:
+    - GameServerSpec
+  ObjectMetaRequestBody:
+    title: ObjectMetaRequestBody
+    type: object
+    properties:
+      GenerateName:
+        type: string
+        description: Prefix for the generated fleetname
+        example: my-server
+        maxLength: 100
+      Namespace:
+        type: string
+        description: Namespace where the fleet will run in
+        example: speeddate-system
+        maxLength: 100
+    description: Spec for ObjectMeta
+    example:
+      GenerateName: my-server
+      Namespace: speeddate-system
+    required:
+    - GenerateName
+    - Namespace
+  ObjectMetaResponseBody:
+    title: ObjectMetaResponseBody
+    type: object
+    properties:
+      GenerateName:
+        type: string
+        description: Prefix for the generated fleetname
+        example: my-server
+        maxLength: 100
+      Namespace:
+        type: string
+        description: Namespace where the fleet will run in
+        example: speeddate-system
+        maxLength: 100
+    description: Spec for ObjectMeta
+    example:
+      GenerateName: my-server
+      Namespace: speeddate-system
+    required:
+    - GenerateName
+    - Namespace
 securityDefinitions:
   jwt:
     type: apiKey
